# log4jscan

./: .gitignore  README.md  log4j-scan3.py  pyproject.toml
